# CLIP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.deploy.yaml  compose.yaml  pyproject.toml  requirements.txt
app/: config.py  lifespan.py  main.py
app/api/: deps.py  router.py
app/errors/: handlers.py
app/schemas/: request.py  response.py
app/services/: caption_rules.py  classifier.py
docs/: CLIP-handoff-brief.md  ceramics-clip-integration-handoff.md  container-release.md  optimization.md
model_cache/: centroids.pt  label_map.json  linear_probe.pt  other_gate.pt
scripts/: download_model.py  features.pt  train.py
tests/: conftest.py  test_api.py  test_classifier.py  test_integration.py
